--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
     </header>
-    <img class="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="four people in a conference room looking at paper">
+    <img id="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="four people in a conference room looking at paper">
     <main>
         <section id="search-engine-optimization" class="services-offered">
             <img src="./assets/images/search-engine-optimization.jpg" alt="a wooden table containing a laptop, a notebook with idea bubbles for search-engine-optimization, a cup of coffee, and a cup of pens" class="float-left" />
@@ -40,31 +40,31 @@
             </p>
         </section>
         <section id="social-media-marketing" class="services-offered">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="a table with people sitting around it with laptops and idea bubbles with symbols of phones, wifi, music, cameras" />
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="a table with people around it, containing laptops and idea bubbles with symbols of phones, wifi, music, cameras" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
     </main>
-    <aside class="benefits">
-        <section class="about-our-benefits">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="lead-generation" />
+    <aside>
+        <section class="benefit-outcomes">
+            <h2>Lead Generation</h2>
+            <img src="./assets/images/lead-generation.png" alt="arrow symbol pointing to a dollar symbol" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="about-our-benefits">
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="brand-awareness"/>
+        <section class="benefit-outcomes">
+            <h2>Brand Awareness</h2>
+            <img src="./assets/images/brand-awareness.png" alt="light bulb with a noise symbol on both sides"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="about-our-benefits">
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt= "cost-management"/>
+        <section class="benefit-outcomes">
+            <h2>Cost Management</h2>
+            <img src="./assets/images/cost-management.png" alt= "dollar sign symbols"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
