--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
             <img src="./assets/images/search-engine-optimization.jpg" 
     alt="a wooden table containing a laptop, a notebook with idea bubbles for search-engine-optimization,
      a cup of coffee, and a cup of pens" class="float-left" />
-            <h2 class=>Search Engine Optimization</h2>
+            <h2>Search Engine Optimization</h2>
             <p>
-                The dominance of mobile internet use means that users are searching for the right business
-                 as they travel, shop, or sit on their couch at home. 
+                The dominance of mobile internet use means that users are 
+                searching for the right business
+                as they travel, shop, or sit on their couch at home. 
                 Search Engine Optimization (SEO) allows you to increase your visibility 
                 and find the right customers for your business.
             </p>
@@ -44,18 +45,22 @@
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. 
-                Social media allows anyone with an internet connection to say whatever they want about your business.
-                 Online Reputation Management gives you the control over what potential 
-                 customers see when they search for your business.
+                Social media allows anyone with an internet connection to say 
+                whatever they want about your business.
+                Online Reputation Management gives you the control over what potential 
+                customers see when they search for your business.
             </p>
         </section>
         <section id="social-media-marketing" class="services-offered">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" 
-            alt="a table with people around it, containing laptops and idea bubbles with symbols of phones, 
-            wifi, music, cameras" />
+            alt="a table with people around it, containing laptops and idea bubbles 
+            with symbols of phones, wifi, music, cameras" />
             <h2>Social Media Marketing</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                Social media continues to have a sizable influence on buying habits. 
+                Social media marketing helps you determine which platforms are suited
+                to your brand, using analytics to find the right markets and increase 
+                your lead generation.
             </p>
         </section>
     </main>
@@ -72,7 +77,8 @@
             <h2>Brand Awareness</h2>
             <img src="./assets/images/brand-awareness.png" alt="light bulb with a noise symbol on both sides"/>
             <p>
-                Users find your business through paid and organic searches, increasing the search ranking
+                Users find your business through paid and organic searches, 
+                increasing the search ranking
                  and visibility for your business.
             </p>
         </section>
